Fix overflow

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -5,6 +5,7 @@
 body {
     width: 100%;
     height: 100vh;
+    margin: 0;
     background-color: $primary;
     color: $primary-dark;
     font-family: $font-family-primary;
