--- a/scss/components/_carousel.scss
+++ b/scss/components/_carousel.scss
@@ -10,6 +10,7 @@
             height: 400px;
             object-fit: cover;
             opacity: 0.2;
+            transition: opacity .3s ease-in-out;
         }
 
         .active {
